[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3.2.0"
actix-web-actors="3"
actix-rt = "2.3.0"
actix = "0.10.0"
actix-files = "0.4.1"
actix-cors = "0.5.4"
actix-http = "2.2.1"
actix-identity = "0.3.1"
anyhow = "1.0.51"
futures = "0.3.21"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
rand = "0.8.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
uuid = { version = "0.8", features = ["v4", "serde"] }
serde_tuple = "0.5.0"

